style.css
:root {
  --dark-cyan: hsl(158, 36%, 37%);
  --cream: hsl(30, 38%, 92%);
  --dark-blue: hsl(212, 21%, 14%);
  --grayish-blue: hsl(228, 12%, 48%);
  --white: hsl(0, 0%, 100%);
  --font-montserrat: "Montserrat", sans-serif;
  --font-fraunces: "Fraunces", serif;
}

/* TYPOGRAPHY */

.perfume {
  font-family: var(--font-montserrat);
  font-size: 0.75rem;
  font-weight: 500;
  text-transform: uppercase;
  letter-spacing: 4.9px;
  color: var(--grayish-blue);
}

h1 {
  font-family: var(--font-fraunces);
  font-size: 2rem;
  font-weight: 700px;
  color: var(--dark-blue);
}

.description {
  font-family: var(--font-montserrat);
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.5;
  color: var(--grayish-blue);
}

.new-price {
  font-family: var(--font-fraunces);
  font-size: 2rem;
  font-weight: 700;
  color: var(--dark-cyan);
}

.old-price {
  font-family: var(--font-montserrat);
  font-size: 0.8125rem;
  font-weight: 500;
  text-decoration: line-through;
  color: var(--grayish-blue);
}

button {
  font-family: var(--font-montserrat);
  font-size: 0.8125rem;
  font-weight: 700;
  color: var(--white);
  background-color: var(--dark-cyan);
}

/* LAYOUT */

body {
  background-color: var(--cream);
  margin: 0;
  display: grid;
  place-items: center;
  padding: 1.75rem 1rem;
}

.product-card {
  background-color: var(--white);
  max-width: 686px;
  border-radius: 10px;
  overflow: hidden;
}

.product-image {
  display: block;
  max-width: 100%;
}

.product-info {
  padding: 1.6875rem 1.5625rem 1.5rem;
}

h1 {
  margin-top: 0.9375rem;
  margin-bottom: 1.125rem;
  line-height: 2rem;
}

.description {
  margin-bottom: 1.5rem;
  line-height: 1.4375rem;
}

.prices {
  display: flex;
  align-items: center;
  gap: 1.25rem;
}

button {
  padding: 1rem 5.625rem;
  border-radius: 0.5rem;
  margin-top: 1rem;
  display: flex;
  gap: 0.625rem;
}

